# bresenham-graphics

./: Bresenham-cercle.cpp  CMakeLists.txt  ligne-cercle.cpp  polynomiale-cercle.cpp  trigonometrie-cercle.cpp
TP1/: Bresenham-line.cpp  Bresenham-polynomiale.cpp  line-polynomiale.cpp
